2000-04-12  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* save.scm (enumerate!): Bugfix: Make sure that enumeration of the
	cdr happens!
	(get-set-for-each, access-for-each): Exclude class slots.
	(load-objects): New method.

2000-04-12  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* save.scm (write-readably): Make default behaviour be to write
	the object using `write'.

	* goops.scm (define-method): Added new, alternative, syntax which
	probably will supercede the old.  [This is added so that people
	can experiment with it a little.]

	* save.scm: New file.

	* Makefile.am (goops_sources): Added save.scm.

2000-03-23  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* goops.c (wrap_init): Cast second arg to SETCDR to SCM.
	(create_smob_classes): Initialize the new real and complex smobs
	with their correct classes.

2000-03-14  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* goops.c (create_smob_classes): Adaptations to reorganization of
	types in Guile-1.3.5.

2000-03-13  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* goops.scm (compute-std-cpl): Modified to linearize according to
	the C3 algorithm in
	http://www.webcom.com/haahr/dylan/linearization-oopsla96.html.
	(Thanks to Michael Livshin.)

	* util.scm (any, every, filter): New procedures.

	* goops.c, goops.h: Adapt GOOPS to new definition of the SCM type.

2000-03-08  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* goops.texi: Updated.

2000-02-11  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* goops.c (scm_sloppy_num2ulong): Added.
	(scm_sys_logand): Rewritten.

2000-02-10  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* goops.c (scm_accessor_method_slot_definition): New selector.
	(Will soon be rewritten together with the others.)

	* goops.scm (compute-getter-method, compute-setter-method): Add
	initialization argument for slot-definition.

	* goops.c (create_standard_classes): New slot in
	<accessor-method>: slot-definition.

2000-01-12  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
